--- a/app/src/main/res/layout/activity_create_new_field.xml
+++ b/app/src/main/res/layout/activity_create_new_field.xml
@@ -206,7 +206,8 @@
             android:backgroundTint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/goal_count"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            android:textAllCaps="false"/>
 
 
     </android.support.constraint.ConstraintLayout>
