--- a/app/src/main/res/layout/activity_edit_field.xml
+++ b/app/src/main/res/layout/activity_edit_field.xml
@@ -187,13 +187,16 @@
             android:id="@+id/save_button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="save"
+            android:text="@string/fui_button_text_save"
+            android:textAllCaps="false"
             android:backgroundTint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/goal_count1"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+
+            />
 
         <ProgressBar
             android:id="@+id/progress_bar_edit11"
