--- a/app/src/main/res/layout/activity_edit_team.xml
+++ b/app/src/main/res/layout/activity_edit_team.xml
@@ -124,6 +124,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/fields_button_states"
+        android:textAllCaps="false"
         android:text="@string/fui_button_text_save"/>
 
     <ProgressBar
