--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -89,7 +89,7 @@
 
 
         <EditText
-            android:id="@+id/real_name"
+            android:id="@+id/real_name_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
@@ -98,13 +98,13 @@
             android:hint="@string/realname"
             android:inputType="textPersonName"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@id/username"
+            app:layout_constraintBottom_toTopOf="@id/username_edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/im" />
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/username_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
@@ -115,7 +115,7 @@
             app:layout_constraintBottom_toTopOf="@id/emailSignUp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/real_name" />
+            app:layout_constraintTop_toBottomOf="@id/real_name_edit" />
 
         <EditText
             android:id="@+id/emailSignUp"
@@ -129,7 +129,7 @@
             app:layout_constraintBottom_toTopOf="@id/passwordSignUp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/username" />
+            app:layout_constraintTop_toBottomOf="@id/username_edit" />
 
         <EditText
             android:id="@+id/passwordSignUp"
