--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -5,200 +5,174 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fields.curiumx.fields.ProfileActivity"
+    android:id="@+id/profileActivity"
     >
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/gradient"
+        android:id="@+id/gradient_detail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <View
-            android:id="@+id/gradient1"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:elevation="3dp"
-            android:background="@color/colorPrimary"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/position_role_text"
+            android:id="@+id/position_role_text_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:layout_marginTop="8dp"
-            android:elevation="3dp"
-
             android:gravity="center"
             android:textStyle="bold"
             android:visibility="visible"
+
+            app:layout_constraintBottom_toBottomOf="@id/gradient_detail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider" />
+            app:layout_constraintTop_toBottomOf="@id/team_with_icon_detail" />
 
-        <TextView
-            android:id="@+id/bio_text1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="8dp"
-            android:elevation="3dp"
-            android:gravity="center"
-            android:maxLines="1"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/position_role_text"
-            app:layout_constraintBottom_toBottomOf="@id/gradient"/>
-
-        <TextView
-            android:id="@+id/friends"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/rounded_view"
-            android:elevation="5dp"
-            android:padding="10dp"
-            android:text="Friends"
-            android:textStyle="bold"
-            android:visibility="visible"
-
-            app:layout_constraintBottom_toBottomOf="@+id/gradient"
-            app:layout_constraintEnd_toStartOf="@+id/profile"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/gradient"
-            app:layout_constraintVertical_bias="0.13" />
-
-        <android.support.constraint.ConstraintLayout
-            android:id="@+id/rep"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/rounded_view"
-            android:elevation="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/usersTeam">
-
-            <TextView
-                android:id="@+id/reputation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="3dp"
-                android:paddingEnd="3dp"
-                android:paddingStart="7dp"
-                android:paddingTop="3dp"
-                android:text="1000"
-                android:textStyle="bold"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-
-                />
-
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:paddingBottom="5dp"
-                android:paddingEnd="5dp"
-                android:paddingStart="1dp"
-                android:paddingTop="5dp"
-                android:src="@drawable/reps"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/reputation"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </android.support.constraint.ConstraintLayout>
-
-        <TextView
-            android:id="@+id/trainings"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:background="@drawable/rounded_view"
-            android:elevation="5dp"
-            android:padding="10dp"
-            android:text="20 trainings"
-            android:textStyle="bold"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@id/gradient"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/profile"
-            app:layout_constraintTop_toTopOf="@id/gradient"
-            app:layout_constraintVertical_bias="0.13" />
 
         <FrameLayout
             android:id="@+id/profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-
+            android:layout_marginTop="16dp"
             android:elevation="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/gradient">
-
+            app:layout_constraintTop_toTopOf="@+id/gradient_detail">
 
             <ImageView
                 android:layout_width="75dp"
                 android:layout_height="75dp"
+                android:contentDescription="@string/profile_image"
                 android:src="@drawable/profile_round" />
 
-
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profilePhoto"
+                android:id="@+id/profilePhoto_detail"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
-
                 android:src="@drawable/profileim"
                 android:visibility="visible" />
         </FrameLayout>
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/real_name_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:elevation="4dp"
+            android:layout_marginTop="4dp"
             android:text="@string/username"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/profile" />
 
-        <TextView
-            android:id="@+id/usersTeam"
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/team_with_icon_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:elevation="4dp"
-            android:text="Team"
-            android:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userName" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginEnd="64dp"
-            android:layout_marginStart="64dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimaryDark"
-            android:elevation="3dp"
-            app:layout_constraintDimensionRatio=""
+            android:elevation="4dp"
+            android:background="@drawable/rounded_view"
+            android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rep" />
+            app:layout_constraintTop_toBottomOf="@+id/real_name_detail">
+
+            <ImageView
+                android:contentDescription="@string/team"
+                android:id="@+id/team_icon"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="4dp"
+                android:src="@drawable/ic_team_icon"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/usersTeam_detail"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/usersTeam_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="4dp"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/team_icon"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/rep_detail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_view"
+        android:elevation="3dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/gradient_detail">
+
+
+        <TextView
+            android:id="@+id/reputation_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:gravity="center"
+            android:padding="10dp"
+            android:paddingEnd="3dp"
+            android:paddingStart="7dp"
+            android:paddingTop="3dp"
+            android:textAlignment="center"
+            android:textColor="@color/blacknot"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/badge_rep_detail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            android:layout_marginBottom="2dp"
+
+            />
+
+        <ImageView
+            android:id="@+id/badge_rep_detail"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="6dp"
+            android:paddingBottom="5dp"
+            android:paddingEnd="5dp"
+            android:paddingStart="1dp"
+            android:paddingTop="5dp"
+            android:src="@drawable/reps"
+            android:contentDescription="@string/badge"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/reputation_detail"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
     </android.support.constraint.ConstraintLayout>
 
     <TextView
-        android:id="@+id/testCurrentField"
+        android:id="@+id/current_field_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -208,37 +182,57 @@
         android:elevation="3dp"
         android:gravity="center"
         android:padding="10dp"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gradient" />
-
-    <TextView
-        android:id="@+id/badges"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_view"
-        android:backgroundTint="@color/colorPrimary"
-        android:elevation="3dp"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="@string/badges"
         android:textColor="@color/blacknot"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="16dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/testCurrentField" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rep_detail" />
+
+
+    <LinearLayout
+        android:id="@+id/activityBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:elevation="6dp"
+        android:focusable="true"
+        android:transitionName="bar"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <ImageButton
+            android:contentDescription="@string/feed_button"
+            android:id="@+id/feed_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/cardview_light_background"
+            android:onClick="onFeedClick"
+
+            android:src="@drawable/home_icon" />
+
+
+        <ImageButton
+            android:contentDescription="@string/profile_button"
+            android:id="@+id/profile_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/cardview_light_background"
+            android:src="@drawable/person_icon" />
+    </LinearLayout>
 
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
