--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -88,11 +88,11 @@
         </FrameLayout>
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/real_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="@string/username"
+            android:text="@string/realname"
             android:textAppearance="@android:style/TextAppearance.Material.Medium"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -111,7 +111,7 @@
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userName">
+            app:layout_constraintTop_toBottomOf="@+id/real_name">
 
             <ImageView
                 android:contentDescription="@string/team"
