--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,12 +8,18 @@
     android:id="@+id/profileActivity"
     >
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/Background_Fields"/>
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/gradient"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:visibility="gone"
+        android:elevation="1dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -152,7 +158,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
-        android:elevation="3dp"
+        android:elevation="2dp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -209,7 +215,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
-        android:elevation="3dp"
+        android:elevation="2dp"
         android:gravity="center"
         android:padding="10dp"
         android:textColor="@color/blacknot"
