--- a/app/src/main/res/layout/activity_team_chat.xml
+++ b/app/src/main/res/layout/activity_team_chat.xml
@@ -42,7 +42,9 @@
             android:backgroundTint="@color/colorPrimary"
             android:text="@string/fui_button_text_send"
             android:clickable="true"
+            android:focusable="true"
             android:visibility="gone"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/message_box_team"
