--- a/app/src/main/res/layout/activity_reputation.xml
+++ b/app/src/main/res/layout/activity_reputation.xml
@@ -6,4 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".ReputationActivity">
 
+   <TextView
+       android:id="@+id/currently_have"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/you_currently_have"
+       android:textStyle="bold"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       android:layout_marginTop="16dp"/>
+
+   <TextView
+       android:id="@+id/reputation_text"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/reputation_text"
+       android:textStyle="bold"
+       android:textSize="25sp"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/currently_have"
+       android:layout_marginTop="16dp"
+
+       />
+
+   <View
+       android:id="@+id/div_rep"
+       android:layout_width="match_parent"
+       android:layout_height="3dp"
+       android:background="@color/colorPrimary"
+       android:layout_marginStart="32dp"
+       android:layout_marginTop="4dp"
+       android:layout_marginEnd="32dp"
+       app:layout_constraintTop_toBottomOf="@id/reputation_text"
+       />
+
+   <TextView
+       android:id="@+id/current_badge_text"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textStyle="bold"
+       android:text="@string/your_current_badge"
+       app:layout_constraintTop_toBottomOf="@id/div_rep"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       android:layout_marginTop="16dp"/>
+
+   <android.support.v7.widget.CardView
+       android:id="@+id/current_badge_card"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       app:layout_constraintTop_toBottomOf="@id/current_badge_text"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:cardCornerRadius="10dp"
+       android:layout_marginTop="16dp"
+       android:elevation="2dp"
+       >
+   <ImageView
+       android:id="@+id/badge_image"
+       android:contentDescription="@string/badge"
+       android:layout_width="100dp"
+       android:layout_height="100dp"
+       android:layout_margin="10dp"
+
+
+       />
+
+   </android.support.v7.widget.CardView>
+
+
+   <TextView
+       android:id="@+id/until_text"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginEnd="32dp"
+       android:layout_marginStart="32dp"
+       android:gravity="center"
+       app:layout_constraintTop_toBottomOf="@id/current_badge_card"
+       android:layout_marginTop="16dp"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       android:textStyle="bold"
+       android:textSize="20sp"
+       />
+
 </android.support.constraint.ConstraintLayout>
