halfed the search ac

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,5 +15,12 @@
         <item name="android:colorBackground">@color/Background_Fields</item>
     </style>
 
+    <style name="FieldsThemeAppCompatNoActionBar" parent="Theme.AppCompat.NoActionBar" >
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="android:colorBackground">@color/Background_Fields</item>
+        <item name="windowActionBar">false</item>
+    </style>
 
 </resources>
