--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,28 +9,31 @@
 
 
     <SearchView
+
         android:id="@+id/search"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
+        android:queryBackground="@android:color/transparent"
+
         android:elevation="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/area_name_thing"
-        android:paddingBottom="6dp"
-        android:paddingEnd="2dp"
-        android:paddingStart="2dp"/>
+app:layout_constraintTop_toTopOf="parent"
+     />
 
 
     <TextView
         android:id="@+id/textViews"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/div_search"
+        app:layout_constraintBottom_toTopOf="@id/activityBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/no_results_found"
         />
 
@@ -38,25 +41,25 @@
         android:id="@+id/teamRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/search"
+        app:layout_constraintTop_toBottomOf="@+id/div_search"
         android:layout_marginTop="8dp"
         >
 
     </com.fields.curiumx.fields.EmptyRecyclerView>
 
     <LinearLayout
-        android:id="@+id/activityBar"
+        android:id="@+id/categories"
         android:transitionName="bar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:visibility="visible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@id/search"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:clickable="true"
         android:focusable="true"
-        android:elevation="5dp">
+        android:layout_marginTop="4dp"
+        >
 
         <Button
             android:id="@+id/fields_button"
@@ -64,7 +67,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/cardview_light_background"
+
+            android:background="@color/Background_Fields"
 
             android:text="Fields" />
 
@@ -74,7 +78,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/cardview_light_background"
+            android:background="@color/Background_Fields"
             android:scaleType="fitCenter"
             android:padding="7dp"
             android:text="Teams"
@@ -86,17 +90,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/cardview_light_background"
+            android:background="@color/Background_Fields"
             android:text="Users"
              />
     </LinearLayout>
 
 
-    <TextView
+    <Button
         android:id="@+id/add_new_field"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
+        android:textAllCaps="false"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_view"
@@ -105,25 +110,25 @@
         android:gravity="center"
         android:padding="10dp"
         android:text="@string/not_finding_field"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/activityBar"
         android:layout_marginBottom="16dp"/>
 
     <LinearLayout
         android:id="@+id/area_name_thing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activityBar"
-        app:layout_constraintBottom_toTopOf="@id/search"
+        app:layout_constraintTop_toBottomOf="@id/categories"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="4dp"
+        android:visibility="visible"
         >
 
         <Button
@@ -149,6 +154,55 @@
             android:layout_marginBottom="1dp"
             android:background="@drawable/rounded_view"
             android:text="@string/field_area" />
+
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/div_search"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@color/DividerColor"
+        app:layout_constraintTop_toBottomOf="@id/area_name_thing"
+        android:layout_marginTop="8dp"
+        />
+
+    <LinearLayout
+        android:id="@+id/activityBar"
+        android:transitionName="bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:clickable="true"
+        android:focusable="true">
+
+        <ImageButton
+            android:id="@+id/feed_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/cardview_light_background"
+
+            android:src="@drawable/home_icon" />
+
+
+
+        <ImageButton
+            android:id="@+id/profile_button"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/cardview_light_background"
+            android:onClick="onProfileClick"
+            android:src="@drawable/person_icon" />
+
+
 
 
     </LinearLayout>
