--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -5,65 +5,43 @@
     android:id="@+id/base_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fields.curiumx.fields.FeedActivity">
+    tools:context="com.fields.curiumx.fields.FeedActivity"
 
+    >
 
-
-
-
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="451dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
-
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/nameTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="30sp"
-        />
-
-<LinearLayout
+    <LinearLayout
     android:id="@+id/activityBar"
     android:transitionName="bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:clickable="true"
         android:focusable="true">
 
     <ImageButton
+        android:contentDescription="@string/feed_button"
         android:id="@+id/feed_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/cardview_light_background"
+        android:background="@color/white"
 
         android:src="@drawable/home_icon" />
 
 
 
     <ImageButton
+        android:contentDescription="@string/profile_button"
         android:id="@+id/profile_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/cardview_light_background"
+        android:background="@color/white"
         android:onClick="onProfileClick"
         android:src="@drawable/person_icon" />
 
@@ -72,92 +50,177 @@
 
 </LinearLayout>
 
-
-
-
-
-
-    <ImageView
-        android:id="@+id/profilePic"
+    <TextView
+        android:id="@+id/your_team_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
-
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/your_team"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/teamCard"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:cardBackgroundColor="@color/cardview_light_background"
-        app:cardElevation="2dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        app:cardCornerRadius="5dp"
-        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginTop="8dp"
         android:clickable="true"
         android:focusable="true"
-
+        android:visibility="gone"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/your_team_text"
         >
 
-        <TextView
-            android:id="@+id/team"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="team"
-            android:textStyle="bold"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:layout_margin="10dp"/>
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/team_name_feed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/team"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/team_photo_feed"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <FrameLayout
+                android:id="@+id/team_photo_feed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_marginBottom="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:elevation="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+
+                <ImageView
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:src="@drawable/profile_round" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/team_image_feed"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center"
+                    android:elevation="6dp"
+                    android:src="@drawable/team_basic" />
+
+            </FrameLayout>
+
+        </android.support.constraint.ConstraintLayout>
+
     </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.CardView
         android:id="@+id/teamCardNoTeam"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:cardBackgroundColor="@color/cardview_light_background"
-        app:cardElevation="2dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/your_team_text"
         android:layout_margin="5dp"
         app:cardCornerRadius="5dp"
-        android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
         android:visibility="gone"
 
         >
 
-        <TextView
-            android:id="@+id/teamNoTeam"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="noteam"
-            android:textStyle="bold"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:layout_margin="10dp"/>
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/teamNoTeam"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/not_at_team"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                android:textStyle="bold"
+                android:textColor="@color/light_text"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="16dp"
+                android:textSize="20sp"
+                />
+
+            <TextView
+                android:id="@+id/join_team_feed"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:layout_marginStart="32dp"
+                android:text="@string/join_team"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                android:textStyle="bold"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/teamNoTeam" />
+
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
-        android:id="@+id/searchCard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/cardview_light_background"
-        app:cardElevation="2dp"
-        android:layout_margin="5dp"
+
+    <TextView
+        android:id="@+id/actions_text"
+        android:text="@string/actions"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/teamCard"
-        app:cardCornerRadius="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        />
+
+    <com.fields.curiumx.fields.EmptyRecyclerView
+        android:id="@+id/actions_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/actions_text"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@id/activityBar"
         >
 
-        <TextView
-            android:id="@+id/search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/search_hint"
-            android:textStyle="bold"
-            android:textAppearance="@android:style/TextAppearance.Material.Medium"
-            android:layout_margin="10dp"
-            />
 
-    </android.support.v7.widget.CardView>
+    </com.fields.curiumx.fields.EmptyRecyclerView>
 
 
 
+    <ProgressBar
+        android:id="@+id/progress_bar_feed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 </android.support.constraint.ConstraintLayout>
