--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -4,19 +4,13 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="5dp"
-   android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
-    android:layout_marginBottom="16dp"
+   android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="8dp"
     android:layout_marginTop="2dp"
-    android:backgroundTint="@color/colorPrimary"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:backgroundTint="@color/white"
     android:id="@+id/root">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp"
-        android:layout_margin="4dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -29,11 +23,13 @@
        android:text="type"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
-       android:layout_marginTop="8dp"
-       app:layout_constraintTop_toBottomOf="@id/div"
+       android:layout_marginTop="12dp"
+       app:layout_constraintTop_toBottomOf="@id/eventDate"
        android:textSize="18sp"
        android:textStyle="bold"
-       android:layout_marginBottom="8dp"
+       android:layout_marginBottom="16dp"
+       android:textColor="@color/light_text"
+
        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
@@ -44,28 +40,19 @@
         app:layout_constraintStart_toEndOf="@id/eventDate"
         android:layout_marginStart="8sp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:textSize="22sp"
 
         />
 
-        <View
-            android:id="@+id/div"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@id/eventTime"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginTop="8dp"
-            />
+
 
         <TextView
             android:id="@+id/eventDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
             android:text="date"
             android:textSize="22sp"
             android:textStyle="bold"
@@ -80,18 +67,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="event"
-        app:layout_constraintTop_toBottomOf="@id/div"
+        app:layout_constraintTop_toBottomOf="@id/eventTime"
         app:layout_constraintStart_toEndOf="@id/eventType"
         android:textSize="18sp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="16dp"
+        android:textColor="@color/light_text"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     </android.support.constraint.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
+
 
 
 </android.support.v7.widget.CardView>
