--- a/app/src/main/res/layout/training_list.xml
+++ b/app/src/main/res/layout/training_list.xml
@@ -19,7 +19,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:textSize="25sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:textColor="@color/light_text"/>
 
 
 
