--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -156,13 +156,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_chainStyle="packed"
             android:layout_marginBottom="2dp"
+            android:textSize="15sp"
+
 
             />
 
         <ImageView
             android:id="@+id/badge_rep_detail"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="6dp"
             android:paddingBottom="5dp"
             android:paddingEnd="5dp"
