--- a/app/src/main/res/layout/training_list.xml
+++ b/app/src/main/res/layout/training_list.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -45,7 +44,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/training_field"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="12dp"
         android:textStyle="bold"
@@ -56,6 +55,7 @@
         android:id="@+id/div_training"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:background="@color/DividerColor"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
         <TextView
@@ -72,4 +72,4 @@
 
     </android.support.constraint.ConstraintLayout>
 
-</android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
